--- a/packages/app/public/html2/dashUsuario.html
+++ b/packages/app/public/html2/dashUsuario.html
@@ -42,7 +42,7 @@
                             <path d="M3 20l1.3 -3.9a9 8 0 1 1 3.4 2.9l-4.7 1" />
                             <path d="M8 13l3 -2l2 2l3 -2" />
                         </svg></span>
-                        <span class="title">Blog</span>
+                        <span class="title">Eventos</span>
                     </a>
                 </li>
                 <li>
@@ -66,7 +66,7 @@
                         <span class="title">Profile</span>
                     </a>
                 </li>
-                <li>
+               <!-- <li>
                     <a href="">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-settings" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -75,8 +75,8 @@
                         </svg></span>
                         <span class="title">Settings</span>
                     </a>
-                </li>
-                <li>
+                </li>-->
+               <!-- <li>
                     <a href="dashCrearEvento.html">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-plus" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -85,7 +85,7 @@
                         </svg></span>
                         <span class="title">Create event</span>
                     </a>
-                </li>
+                </li>-->
                 <li>
                     <a href="index.html">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-bar-left" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -112,7 +112,7 @@
                 </div>
                 <div class="search">
                     <label>
-                    <!-- <input type="text" placeholder="search here">-->
+                    <input type="text" placeholder="search here">
                     </label>
                 </div>
                 <div class="user">
@@ -213,6 +213,22 @@
                     <div class="cardHeader">
                         <h2>Progress</h2>
                     </div>
+                    <!--<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mood-crazy-happy" width="180" height="180" viewBox="0 0 24 24" stroke-width="2" stroke="#00b341" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <circle cx="12" cy="12" r="9" />
+                        <line x1="7" y1="8.5" x2="10" y2="11.5" />
+                        <path d="M7 11.5l3 -3" />
+                        <line x1="14" y1="8.5" x2="17" y2="11.5" />
+                        <path d="M14 11.5l3 -3" />
+                        <path d="M9.5 15a3.5 3.5 0 0 0 5 0" />
+                    </svg>-->
+                    <div class="card">
+                        <div class= "contenedor1" id="perfil">
+                            <div class="col-12 my-13 pt-3 shadow">
+                                <hr>
+                                </div>
+                            </div>
+                        </div>
                 </div>
             </div>
         </div>
@@ -225,14 +241,4 @@
 
 
             <!--
-                <div class="card sombra">
-                    <div class= "contenedor1" id="perfil">
-                        <div class="col-12 my-13 pt-3 shadow">
-                            <hr>
-                            <div class="contenedor2">
-                                <div class="section-header">
-                                    <h2>Lista de Actividades</h2>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                
