--- a/packages/app/public/html2/tableroDeEventosParticipante.html
+++ b/packages/app/public/html2/tableroDeEventosParticipante.html
@@ -91,7 +91,7 @@
             </ul>
         </div>
         <div class="main">
-            <dir class="topbar">
+            <div class="topbar">
                 <div class="toggle" onclick="toggleMenu()">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -110,7 +110,7 @@
                         <img src="../img/perfil.jpg" alt="">
                     </div>
                 </div>
-            </dir>
+            </div>
             <div class="cardbox">
                 <div class="card sombra">
                     <div>
@@ -145,23 +145,23 @@
                 </div>
             </div>
             <div class="cardbox">
-                
-                <!--
-                <div class="card sombra">
-                    <!--<div>
-                        <div class="actividadParticipante">
-                            <h3>Escuela de Familias</h1>
-                            <img>
-                            <h4>Cl. 63 #45-10 </h4>
-                            <h5>16/05/2021</h5>
-                            <br>
-                            <p>
-                                Este programa consiste en el desarrollo de sistemas de apoyo social a familias o allegados de personas con enfermedad mental a través de programas de psicoeducación (escuelas de familias) y la potenciación y desarrollo de redes de ayuda mutua.
-                            </p>
-                            <a id= "Unirse" class="btn">Unire</a>
-                        </div>
-                </div>-->
+                    <!--
+                    <div class="card sombra">
+                        <div>
+                            <div class="actividadParticipante">
+                                <h3>Escuela de Familias</h1>
+                                <img>
+                                <h4>Cl. 63 #45-10 </h4>
+                                <h5>16/05/2021</h5>
+                                <br>
+                                <p>
+                                    Este programa consiste en el desarrollo de sistemas de apoyo social a familias o allegados de personas con enfermedad mental a través de programas de psicoeducación (escuelas de familias) y la potenciación y desarrollo de redes de ayuda mutua.
+                                </p>
+                                <a id= "Unirse" class="btn">Unire</a>
+                            </div>
+                    </div>-->
             </div>
+
         </div>
     </div>
     <script src="../js/dashboard.js"></script>
