--- a/packages/app/public/html/EventosPsicologo.html
+++ b/packages/app/public/html/EventosPsicologo.html
@@ -161,7 +161,7 @@
         </div>
     </div>
     <script src="../js/dashboard.js"></script>
-    <script src="../js/prueba2.js"></script> 
+    <script src="../js/modificarEvento.js"></script> 
     
 
 </body>
